--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -1191,13 +1191,12 @@ body .footer .footer-iconTop a i {
   }
   body .header #headernav .navbar {
     position: absolute;
-    padding: 0 4%;
     left: 0;
-    top: 100%;
+    top: 90%;
   }
   body .header #headernav .navbar #navbar {
     width: 100vw;
-    padding: 3rem 0;
+    padding: 3rem 3rem;
     background-color: rgba(12, 22, 33, 0.4901960784);
     -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
