--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -1215,7 +1215,7 @@ body .footer .footer-iconTop a i {
   }
   body .Home {
     flex-direction: column-reverse;
-    height: 115rem;
+    height: 120rem;
     justify-content: center;
     align-items: center;
   }
@@ -1223,6 +1223,7 @@ body .footer .footer-iconTop a i {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
   body .Home .home-content p {
     text-align: center;
@@ -1241,6 +1242,10 @@ body .footer .footer-iconTop a i {
 @media (max-width: 425px) {
   html {
     font-size: 35%;
+  }
+  body .Home {
+    height: 120rem;
+    padding-bottom: 5rem;
   }
 }
 @media (max-width: 375px) {
