--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -1116,9 +1116,9 @@ body {
         }
 
         #card2{
-          background-color: gray;
+          background-color: #12364A;
           background-image: url("../img/SMARTCALC.webp");
-          background-size: 38rem 20rem;
+          background-size: 35rem 18rem;
         }
       }
 
