--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -2,7 +2,6 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Kenia&family=Oswald:wght@200;400;700&family=Source+Sans+3:ital,wght@0,300;0,400;0,600;1,400&family=Ubuntu:wght@300;400;500;700&display=swap");
 
-
 /*Variables*/
 $bg-navbar: #0c1621;
 $bg-primary: rgb(14, 35, 54);
@@ -933,8 +932,8 @@ body {
           padding: 16rem 0 0;
           border: none;
           width: 100%;
-          height: 46rem;
-          max-width: 60ch;
+          height: 47rem;
+          max-width: 62ch;
           border-radius: 1rem;
           overflow: hidden;
           transition: all 0.3s ease-in-out;
@@ -1110,15 +1109,20 @@ body {
           }
         }
 
-        #card1{
+        #card1 {
           background-image: url("../img/ProjectPortfolio.webp");
-          background-size: 31rem 46rem;
+          background-size: 34rem 47rem;
         }
 
-        #card2{
-          background-color: #12364A;
+        #card2 {
+          background-color: #12364a;
           background-image: url("../img/SMARTCALC.webp");
-          background-size: 35rem 18rem;
+          background-size: 34rem 18rem;
+        }
+
+        #card3 {
+          background-image: url("../img/CardSlideResposive.png");
+          background-size: 32rem 47rem;
         }
       }
 
@@ -1478,7 +1482,6 @@ body {
 }
 
 @media (max-width: 768px) {
-
   body {
     .header {
       #headernav {
@@ -1550,6 +1553,22 @@ body {
     .Home {
       height: 120rem;
       padding-bottom: 5rem;
+    }
+
+    .Projects {
+      .projects-container {
+        .owl-carousel-1 {
+          .card {
+            .card-container {
+              .card-body {
+                .card-text {
+                  font-size: 1.35rem;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
