--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -980,7 +980,7 @@ body {
               .card-text {
                 opacity: 0;
                 transition: opacity 1s ease-in-out;
-                font-size: 1.3rem;
+                font-size: 1.25rem;
                 text-align: justify;
               }
 
@@ -1123,6 +1123,11 @@ body {
         #card3 {
           background-image: url("../img/CardSlideResposive.png");
           background-size: 32rem 47rem;
+        }
+
+        #card4 {
+          background-image: url("../img/AquaDesings.webp");
+          background-size: 33.5rem 47rem;
         }
       }
 
