--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -170,7 +170,7 @@ body .Home .ImgF .Foto img {
   width: 34rem;
   height: 34rem;
   transition: 0.5s;
-  background: linear-gradient(to top, rgb(14, 35, 54), black);
+  filter: drop-shadow(0px 0px 10px rgb(0, 11, 19));
 }
 body .Home .ImgF .Foto .circle-spin {
   position: absolute;
